# qt5lab

./: CMakeLists.txt
gui/: form.csv
include/: Buttons_MainWindow.h  MainWindow.h  dynamic.h  static.h
scripts/: gen_button.py
src/: MainWindow.cpp  dynamic.cpp  static.cpp
